<resources>
    <string name="app_name">LiangCare</string>

    <string name="app_lock">应用锁</string>
    <string name="security_cabinet">保密柜</string>
    <string name="virus_scan">病毒扫描</string>
    <string name="delete_image_button">删除图片按钮</string>
    <string name="icon">图标</string>
    <string name="lock_image">图片内容锁</string>
    <string name="cabinet_image">图片内容柜子</string>
    <string name="search_image">图片内容搜索</string>

    <string name="permission_request">权限申请</string>
    <string name="request_text">当前应用缺少必要权限</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>

    <string name="app_count_text">未上锁应用%1$d个</string>
    <string name="app_installed">已安装应用</string>
    <string name="app_info_init">应用信息初始化</string>
    <string name="loading">加载中...</string>
    <string name="fun_need_app_usage">该功能需要使用应用记录访问权限</string>


    <string name="enter_pass">请输入解锁密码</string>
    <string name="min_length_is_4">密码最短长度为4!</string>
    <string name="set_password">请设置解锁密码</string>
    <string name="confirm_password">请确认解锁密码</string>
    <string name="wrong_pass">密码错误!</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="storage_location_select">选择存储位置</string>
    <string name="pass_4_16">密码由4-16位数字组成</string>
    <string name="pass_set_suss">密码设置成功</string>
    <string name="pass_no_match">两次密码不一致, 请重新设置密码</string>
    <string name="encrypting">正在加密</string>

    <string name="click_stop">点击停止服务</string>
    <string name="no_data">暂无数据</string>

    <string name="done">完成</string>
    <string name="cancel">取消</string>

    <string name="photo">图片</string>
    <string name="document">文档</string>
    <string name="video">视频</string>
    <string name="audio">音频</string>
    <string name="file_icon">文件图标</string>

    <string name="num_0">0</string>

    <string-array name="internal_storage">
        <item>内部存储</item>
    </string-array>

    <string-array name="location_set_items">
        <item>内部存储</item>
        <item>SD卡</item>
    </string-array>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="check_mark">✓</string>
    <string name="title_activity_sec_cab">SecCabActivity</string>
</resources>
