<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/secCab_passInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:inputType="numberPassword"
        android:hint="@string/password"/>

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/secCab_passInput"
        android:text="@string/forget_password"
        android:textColor="@android:color/holo_blue_light"/>

    <Button
        android:id="@+id/done"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/done"/>

</RelativeLayout>