<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:columnCount="2"
        android:rowCount="2">

        <android.support.v7.widget.CardView
            android:id="@+id/doc_cardView"
            app:cardCornerRadius="@dimen/dimen_8"
            android:elevation="@dimen/dimen_4"
            style="@style/myCardView.L">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:cropToPadding="true"
                    android:src="@drawable/category_icon_document"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document"
                    android:textSize="12.0sp"/>

                <TextView
                    android:id="@+id/doc_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_0"
                    android:textSize="12.0sp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/image_cardView"
            app:cardCornerRadius="@dimen/dimen_8"
            android:elevation="@dimen/dimen_4"
            style="@style/myCardView.R">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:cropToPadding="true"
                    android:src="@drawable/category_icon_image"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textSize="12.0sp"/>

                <TextView
                    android:id="@+id/photo_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_0"
                    android:textSize="12.0sp"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/audio_cardView"
            app:cardCornerRadius="@dimen/dimen_8"
            android:elevation="@dimen/dimen_4"
           style="@style/myCardView.L">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:cropToPadding="true"
                    android:src="@drawable/category_icon_audio"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio"
                    android:textSize="12.0sp"/>

                <TextView
                    android:id="@+id/audio_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_0"
                    android:textSize="12.0sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/video_cardView"
            app:cardCornerRadius="@dimen/dimen_8"
            android:elevation="@dimen/dimen_4"
           style="@style/myCardView.R">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:cropToPadding="true"
                    android:src="@drawable/category_icon_video"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textSize="12.0sp"/>

                <TextView
                    android:id="@+id/video_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_0"
                    android:textSize="12.0sp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>


</LinearLayout>
